# calculator-mcp

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  smithery.yaml
calculator_mcp/: main.py
