[project]
name = "calculator-mcp"
version = "0.1.0"
description = "An advanced calculator MCP server with mathematical operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.9.1",
    "mcp[cli]>=1.10.1",
]

[project.scripts]
calculator-mcp = "calculator_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calculator_mcp"]